test/should_fail/exhaustive_user_type.hrl
-record(variant1, {a}).
-record(variant2, {b}).
